<resources>
    <string name="app_name">Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="password_tx">password:</string>
    <string name="user_tx">user:</string>
    <string name="log_out">Log out</string>
    <string name="edit_text_user_error">user name is too short</string>
    <string name="edit_text_password_error">passWord is too short</string>
</resources>